--- a/HTML/Templates/movie.html
+++ b/HTML/Templates/movie.html
@@ -8,14 +8,14 @@
 <body>
     <div class="contentbox">
         <nav>
-            <a href="../main.html" id="home">Home</a>
-            <a href="../Templates/contact.html" id="contact">Contact Us</a>
-            <a href="../Templates/submit.html" id="submit">Submit a Recipe/Movie</a>
+            <a id="a" href="../main.html" id="home">Home</a>
+            <a id="a" href="../Templates/contact.html" id="contact">Contact Us</a>
+            <a id="a" href="../Templates/submit.html" id="submit">Submit a Recipe/Movie</a>
             
         </nav>
         <h1 id="h1">Your Movie is...</h1>
             <div id="htmlbox">
-                
+                <button  class="btn" id="moviebtn"style="cursor: pointer;">Get a Movie</button>
             </div>
         
     </div>
