--- a/HTML/Templates/contact.html
+++ b/HTML/Templates/contact.html
@@ -9,8 +9,8 @@
     <body>
         <div class="contentbox">
             <nav>
-                <a href="../main.html" id="home">Home</a>
-                <a href="../Templates/submit.html" id="submit">Submit a Recipe/Movie</a>
+                <a id="a" href="../main.html" id="home">Home</a>
+                <a id="a" href="../Templates/submit.html" id="submit">Submit a Recipe/Movie</a>
             </nav>
             <h1 id="h1">Coming Soon!</h1>
 
