--- a/HTML/Templates/login.html
+++ b/HTML/Templates/login.html
@@ -16,12 +16,13 @@
     <div class="contentbox">
 
         <nav>
-            <a href="../main.html" id="home">Home</a>
-            <a href="../Templates/contact.html" id="contact">Contact Us</a>
-            <a href="../Templates/submit.html" id="submit">Submit a Recipe</a>
+            <a id="a" href="../main.html" id="home">Home</a>
+            <a id="a" href="../Templates/contact.html" id="contact">Contact Us</a>
+            <a id="a" href="../Templates/submit.html" id="submit">Submit a Recipe</a>
         </nav>
         <table>
             <form>
+                <h1 id="h1">User Login</h1>
                 <br/>
                     <input class="input" type="text" placeholder="Enter your Username"></input>
                 <br/>
