--- a/HTML/Templates/meals.html
+++ b/HTML/Templates/meals.html
@@ -14,9 +14,12 @@
                 <a id="a" href="../Templates/submit.html" id="submit">Submit a Recipe/Movie</a>
             </nav>
             <h1 id="h1">Your Meal is...</h1>
-            <div id="htmlbox">
-                <button class="btn" id="dinnerbtn" style="cursor: pointer;">Get a Meal</button>
-            </div>
+                <div id="htmlbox">
+                <div id="answerbox">
+
+                </div>
+                    <button class="btn" id="mealbtn" style="cursor: pointer;">Get a Meal</button>
+                </div>
             
         </div>
     </body> 
