--- a/CSS/main.css
+++ b/CSS/main.css
@@ -87,14 +87,26 @@ html {
     margin-top: 0.5%;
 } */
 
-#registerbtn {
+#mealbtn {
+  margin-left: 40%;
+  margin-top: 10%;
+  width: 25%;
+}
+
+#answerbox {
+  /* border: 1px solid black; */
+  height: 50%;
+  width: 100%
+}
+
+/* #registerbtn {
     margin: auto;
     display: block;
     margin-left: 1%;
     margin-top: 0.5%;
     position: absolute;
     padding: 5px;
-}
+} */
 
 #title {
     color: black;
@@ -214,6 +226,6 @@ nav {
   border: 1px solid black;
   height: 50%;
   width: 40%;
-  margin-left: 30rem;
+  margin-left: 27rem;
   margin-top: 5rem;
 }
